[tool.poetry]
name = "agent-actions"
version = "0.1.0"
description = ""
authors = ["shubham bajaj <shmbajaj32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
redis = "^4.5.4"
twilio = "^8.1.0"
vocode = "0.1.111"
vonage = "^3.5.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
